# pinkcity_it_local

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pinkcityit/: hooks.py  modules.txt
pinkcityit/config/: desktop.py  docs.py
pinkcityit/pink_city_it_team/doctype/api_test/: api_test.js  api_test.json  api_test.py  test_api_test.py
pinkcityit/pink_city_it_team/doctype/task_new/: task_new.js  task_new.json  task_new.py  test_task_new.py
pinkcityit/pink_city_it_team/doctype/test/: test.js  test.json  test.py  test_test.py
pinkcityit/pink_city_it_team/doctype/test_ct/: test_ct.json  test_ct.py
pinkcityit/pinkcity_buying/doctype/vendor_registration_form/: test_vendor_registration_form.py  vendor_registration_form.js  vendor_registration_form.json  vendor_registration_form.py
pinkcityit/pinkcity_crm/dashboard_chart/photography_assign_to/: photography_assign_to.json
pinkcityit/pinkcity_crm/dashboard_chart/photography_request/: photography_request.json
pinkcityit/pinkcity_crm/dashboard_chart/photography_request_:_arvind/: photography_request_:_arvind.json
pinkcityit/pinkcity_crm/dashboard_chart/photography_request_:_dinesh/: photography_request_:_dinesh.json
pinkcityit/pinkcity_crm/dashboard_chart/photography_request_:_trilok/: photography_request_:_trilok.json
pinkcityit/pinkcity_crm/dashboard_chart/photography_request_dinesh/: photography_request_dinesh.json
pinkcityit/pinkcity_crm/doctype/co_diamond_costin/: co_diamond_costin.json  co_diamond_costin.py
pinkcityit/pinkcity_crm/doctype/co_finding/: co_finding.json  co_finding.py
(+271 files in other folders)
